--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
 
 
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-  <script type="text/javascript">
-    var duoshuoQuery = {short_name:"hygblog"};
+  <!--script type="text/javascript">
+    var duoshuoQuery = {short_name:"cxqblog"};
     (function() {
       var ds = document.createElement('script');
       ds.type = 'text/javascript';ds.async = true;
@@ -34,7 +34,7 @@
       ds.charset = 'UTF-8';
       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
-  </script>
+  </script-->
 <!-- 多说公共JS代码 end -->
 
 <!-- 在新窗口中打开 -->
