--- a/_includes/duplicate.html
+++ b/_includes/duplicate.html
@@ -43,10 +43,10 @@
         </ul>
       </div>
 
-      <div class="footer-col  footer-col-3">
+      <!--div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
          <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-      </div>
+      </div-->
     </div>
 
   </div>
