--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/highlight.js/8.4/highlight.min.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 
-	<script>
+	<!--script>
 	var _hmt = _hmt || [];
 	(function() {
 	  var hm = document.createElement("script");
@@ -40,6 +40,6 @@
 	  var s = document.getElementsByTagName("script")[0]; 
 	  s.parentNode.insertBefore(hm, s);
 	})();
-	</script>
+	</script-->
 
 </head>
