--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
 <script>
 var gitment = new Gitment({
   id: 'location.href', // 可选。默认为 location.href
-  owner: 'caoxiaoqing',
+  owner: '7627172',
   repo: 'https://github.com/caoxiaoqing/CaoXiaoqing.github.io.git',
   oauth: {
     client_id: 'f6c98a7a3fd7c7cf3b6b',
