--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,7 +5,7 @@
 var gitment = new Gitment({
   id: 'location.href', // 可选。默认为 location.href
   owner: '7627172',
-  repo: 'https://github.com/caoxiaoqing/CaoXiaoqing.github.io.git',
+  repo: 'CaoXiaoqing.github.io',
   oauth: {
     client_id: 'f6c98a7a3fd7c7cf3b6b',
     client_secret: '3ffd1d22c828ecafb8ae282bffa8fe1b3af0ada8',
