--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
 <script>
 var gitment = new Gitment({
   id: 'location.href', // 可选。默认为 location.href
-  owner: '7627172',
+  owner: 'caoxiaoqing',
   repo: 'CaoXiaoqing.github.io',
   oauth: {
     client_id: 'f6c98a7a3fd7c7cf3b6b',
