--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: '<%= page.title %>', // 可选。默认为 location.href
+  id: document.title, // 可选。默认为 location.href, '<%= page.title %>'
   owner: 'caoxiaoqing',
   repo: 'CaoXiaoqing.github.io',
   oauth: {
