--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,14 +40,14 @@
     </script>
 {% endif %}
 
-<script type="text/javascript" 
+<!--script type="text/javascript" 
   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+</script-->
 
-{% if page.mathjax %}
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
     tex2jax: { inlineMath: [["$","$"],["\\(","\\)"]] },
+	Tex: { equationNumber: { autoNumber: "AMS" } },
     "HTML-CSS": {
       linebreaks: { automatic: true, width: "container" }
     }
@@ -56,5 +56,5 @@
 <script type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
-{% endif %}
+
 </head>
